[package]
name = "find_all"
version = "2.0.0"
edition = "2021"
authors = ["Fred Cook"]
description = "A (nearly) identical alternative for `Iterator::find` which returns an `Option<Vec<usize>>` containing all elements which meet a given predicate (instead of just the first)"
repository = "https://github.com/nectariner/find_all"
license = "GPL-3.0-only"
keywords = ["iterator", "find"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
